# netwatch-monitor

./: .gitignore  Cargo.toml  README.md  build.sh  config.toml  install.sh
.qwen/skills/netwatch-tui/: SKILL.md
src/: config.rs  external_ip.rs  main.rs  ping.rs  ui.rs
