[package]
name = "netwatch-monitor"
version = "0.1.0"
edition = "2021"
description = "TUI ping monitor for multiple servers"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full", "time", "process"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Ping implementation
ping = "0.3"

# Time utilities
chrono = "0.4"

# Directory paths
dirs = "5"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
